got printing working, in chrome on my computer at least

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 					<li>Bash</li>
 					<li>Assembly</li>
 				</ul>
-				<p>I'm best with JavaScript, but I'm a quick learner<p>
+				<p>I'm best with JavaScript, and I'm a quick learner<p>
 			</div>
 			<div>
 				<h2>Other Skills</h2>
