got my GPA from The Hub

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 			</div>
 			<div>
 				<h2>Other Skills</h2>
-				<p>I have been slowly learning UI design.  This resume itself was an exercise in responsive design (web version on my GitHub).  I would also recommend checking out my startup (see <strong>Entrepreneurship</strong>)</p>
+				<p>I have been slowly learning UI design.  This resume itself was an exercise in responsive design (web version on my GitHub).  I would also recommend checking out my startup (see <strong>Entrepreneurship</strong>).</p>
 				<p>I have a strong discrete math background and some leadership experience.  I also have a lot of practice talking to customers.</p>
 			</div>
 			<div>
@@ -79,7 +79,7 @@
 							<li>Mathematics</li>
 						</ul>
 					</div>
-					<div><strong>GPA:</strong> 3.????</div>
+					<div><strong>GPA:</strong> 3.06</div>
 				</p>
 				<p>Notable Classes:
 					<ul class="reduce-padding">
