make gh-pages default branch

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 		<div class="experience">
 			<div>
 				<h2>Entrepreneurship</h2>
-				<p class="dates">May 2013 - </p>
+				<p class="dates">May 2013 &mdash; </p>
 				<ul>
 					<li>Developed an app which allows customers at restuarants to pay their bills on their smartphones</li>
 					<li>Talked extensively with restaurant owners and patrons, adjusting the product based on their feedback</li>
@@ -131,7 +131,7 @@
 			</div>
 			<div>
 				<h2>Data Coder - CMU's CASOS (part time)</h2>
-				<p class="dates">Fall 2009 - Summer 2010</p>
+				<p class="dates">Fall 2009 &mdash; Summer 2010</p>
 				<ul>
 					<li>Helped develop software for the analysis of textual social networks</li>
 					<li>Worked closely with post-doc Judith Gelernter in the development of her georeferencing algorithm for news articles</li>
@@ -139,7 +139,7 @@
 			</div>
 			<div>
 				<h2>Fluid.js (personal project)</h2>
-				<p class="dates">Spring 2014 - </p>
+				<p class="dates">Spring 2014 &mdash; </p>
 				<ul>
 					<li>A JavaScript MVC designed to be lightweight and similar to Backbone.js in usage, but allow for CSS transitions to be incorporated more easily</li>
 					<li>Git Repo: <a>http://www.github.com/sjelin/FluidJS</a></li>
