--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
 	<body>
 		<div class="header">
 			<h1>Martin Samuel Jelin</h1>
-			<div class="contact">
-				<p><a>sjelin@gmail.com</a></p>
-				<p><a>github.com/sjelin</a></p>
-				<p><a>(310) 880-4668</a></p>
-			</div>
+			<ul class="contact">
+				<li><a>sjelin@gmail.com</a></li>
+				<li><a>github.com/sjelin</a></li>
+				<li><a>(310) 880-4668</a></li>
+			</ul>
 		</div>
 		<div class="about">
 			<div>
