--- a/index.html
+++ b/index.html
@@ -123,14 +123,14 @@
 				</ul>
 			</div>
 			<div>
-				<h2>Teaching Assistant (part time)</h2>
+				<h2>Teaching Assistant<span class="notes"> (part time)</span></h2>
 				<p class="dates">Fall 2010, Fall 2011</p>
 				<ul>
 					<li>Taught recitation for two classes (basic 3D calculus and introductory discrete mathematics), held office hours and graded for three classes (the previous two and a class on combinatorics)</li>
 				</ul>
 			</div>
 			<div>
-				<h2>Data Coder - CMU's CASOS (part time)</h2>
+				<h2><span class="notes">Data Coder - </span>CMU's CASOS<span class="notes"> (part time)</span></h2>
 				<p class="dates">Fall 2009 &mdash; Summer 2010</p>
 				<ul>
 					<li>Helped develop software for the analysis of textual social networks</li>
@@ -138,7 +138,7 @@
 				</ul>
 			</div>
 			<div>
-				<h2>Fluid.js (personal project)</h2>
+				<h2>Fluid.js<span class="notes"> (personal project)</span></h2>
 				<p class="dates">Spring 2014 &mdash; </p>
 				<ul>
 					<li>A JavaScript MVC designed to be lightweight and similar to Backbone.js in usage, but allow for CSS transitions to be incorporated more easily</li>
