yet more responsiveness

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 			</div>
 			<div>
 				<h2>Other Skills</h2>
-				<p>I have been slowly learning UI design.  This resume itself was an exercise in responsive design (web version on my GitHub).  I would also recommend checking out my startup (see <strong>Entrepreneurship</strong>).</p>
+				<p>I have been slowly learning UI design.  This resume itself was a small exercise in responsive design (web version on my GitHub).  I would also recommend checking out my startup (see <strong>Entrepreneurship</strong>).</p>
 				<p>I have a strong discrete math background and some leadership experience.  I also have a lot of practice talking to customers.</p>
 			</div>
 			<div>
@@ -95,19 +95,19 @@
 		<div class="experience">
 			<div>
 				<h2>Entrepreneurship</h2>
-				<p class="dates">May 2013 &mdash; </p>
+				<p class="dates">(May 2013 &mdash; )</p>
 				<ul>
 					<li>Developed an app which allows customers at restuarants to pay their bills on their smartphones</li>
 					<li>Talked extensively with restaurant owners and patrons, adjusting the product based on their feedback</li>
 					<li>Ran the app live at a restaurant, adjusting based on customer responces are resulting in metrics 50x better than the competition</li>
 					<li>Website: <a>getthecheck.com</a></li>
-					<li>Metrics site: <a>http://www.getthecheck.com/metrics.html</a></li>
-					<li>Code: <a>http://www.github.com/Check-Please/cx</a></li>
+					<li>Metrics site: <a>getthecheck.com/metrics.html</a></li>
+					<li>Code: <a>github.com/Check-Please/cx</a></li>
 				</ul>
 			</div>
 			<div>
 				<h2>Microsoft Internship</h2>
-				<p class="dates">Summer 2011</p>
+				<p class="dates">(Summer 2011)</p>
 				<ul>
 					<li>Worked with the Office Shared Services team</li>
 					<li>Build the sign-in screen in Office 365</li>
@@ -116,7 +116,7 @@
 			</div>
 			<div>
 				<h2>Cisco Internship</h2>
-				<p class="dates">Summer 2010</p>
+				<p class="dates">(Summer 2010)</p>
 				<ul>
 					<li>Worked with the Cisco CRS Multi-Chassis debugging team</li>
 					<li>Worked on a website for executing debugging commands, displaying debugging information, and searching a database of bug reports</li>
@@ -124,14 +124,14 @@
 			</div>
 			<div>
 				<h2>Teaching Assistant<span class="notes"> (part time)</span></h2>
-				<p class="dates">Fall 2010, Fall 2011</p>
+				<p class="dates">(Fall 2010, Fall 2011)</p>
 				<ul>
 					<li>Taught recitation for two classes (basic 3D calculus and introductory discrete mathematics), held office hours and graded for three classes (the previous two and a class on combinatorics)</li>
 				</ul>
 			</div>
 			<div>
 				<h2><span class="notes">Data Coder - </span>CMU's CASOS<span class="notes"> (part time)</span></h2>
-				<p class="dates">Fall 2009 &mdash; Summer 2010</p>
+				<p class="dates">(Fall 2009 &mdash; Summer 2010)</p>
 				<ul>
 					<li>Helped develop software for the analysis of textual social networks</li>
 					<li>Worked closely with post-doc Judith Gelernter in the development of her georeferencing algorithm for news articles</li>
@@ -139,10 +139,10 @@
 			</div>
 			<div>
 				<h2>Fluid.js<span class="notes"> (personal project)</span></h2>
-				<p class="dates">Spring 2014 &mdash; </p>
+				<p class="dates">(Spring 2014 &mdash; )</p>
 				<ul>
 					<li>A JavaScript MVC designed to be lightweight and similar to Backbone.js in usage, but allow for CSS transitions to be incorporated more easily</li>
-					<li>Git Repo: <a>http://www.github.com/sjelin/FluidJS</a></li>
+					<li>Git Repo: <a>github.com/sjelin/FluidJS</a></li>
 				</ul>
 			</div>
 		</div>
