--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 				</ul>
 			</div>
 			<div>
-				<h2><span class="notes">Data Coder - </span>CMU's CASOS<span class="notes"> (part time)</span></h2>
+				<h2><span class="unimportant">Data Coder - </span>CMU's CASOS<span class="notes"> (part time)</span></h2>
 				<p class="dates">(Fall 2009 &mdash; Summer 2010)</p>
 				<ul>
 					<li>Helped develop software for the analysis of textual social networks</li>
