--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 			</ul>
 		</div>
 		<div class="about">
-			<div>
+			<div id="coding">
 				<h2>Coding Skills</h2>
 				<p>I've worked with the following technologies:</p>
 				<ul class="inline">
@@ -62,12 +62,12 @@
 				</ul>
 				<p>I'm best with JavaScript, and I'm a quick learner<p>
 			</div>
-			<div>
+			<div id="other">
 				<h2>Other Skills</h2>
-				<p>I have been slowly learning UI design.  This resume itself was a small exercise in responsive design (web version on my GitHub).  I would also recommend checking out my startup (see <strong>Entrepreneurship</strong>).</p>
+				<p>I have been slowly learning UI design.  This resume itself was a small exercise in responsive design (web version on my GitHub).  I would also recommend checking out my startup (see <a><strong>Entrepreneurship</strong></a>).</p>
 				<p>I have a strong discrete math background and some leadership experience.  I also have a lot of practice talking to customers.</p>
 			</div>
-			<div>
+			<div id="education">
 				<h2>Education</h2>
 				<p>
 					<div>Carnegie Mellon</div>
@@ -93,19 +93,19 @@
 			</div>
 		</div>
 		<div class="experience">
-			<div>
+			<div id="entrepreneurship">
 				<h2>Entrepreneurship</h2>
 				<p class="dates">(May 2013 &mdash; )</p>
 				<ul>
-					<li>Developed an app which allows customers at restuarants to pay their bills on their smartphones</li>
+					<li>Developed an app which allows customers at restaurants to pay their bills on their smartphones</li>
 					<li>Talked extensively with restaurant owners and patrons, adjusting the product based on their feedback</li>
-					<li>Ran the app live at a restaurant, adjusting based on customer responces are resulting in metrics 50x better than the competition</li>
+					<li>Ran the app live at a restaurant, adjusting based on customer responses and resulting in metrics 50x better than the competition</li>
 					<li>Website: <a>getthecheck.com</a></li>
 					<li>Metrics site: <a>getthecheck.com/metrics.html</a></li>
 					<li>Code: <a>github.com/Check-Please/cx</a></li>
 				</ul>
 			</div>
-			<div>
+			<div id="microsoft">
 				<h2>Microsoft Internship</h2>
 				<p class="dates">(Summer 2011)</p>
 				<ul>
@@ -114,7 +114,7 @@
 					<li>Developed a tool for automatic data collection in the back end of Office 365</li>
 				</ul>
 			</div>
-			<div>
+			<div id="cisco">
 				<h2>Cisco Internship</h2>
 				<p class="dates">(Summer 2010)</p>
 				<ul>
@@ -122,14 +122,14 @@
 					<li>Worked on a website for executing debugging commands, displaying debugging information, and searching a database of bug reports</li>
 				</ul>
 			</div>
-			<div>
+			<div id="ta">
 				<h2>Teaching Assistant<span class="notes"> (part time)</span></h2>
 				<p class="dates">(Fall 2010, Fall 2011)</p>
 				<ul>
 					<li>Taught recitation for two classes (basic 3D calculus and introductory discrete mathematics), held office hours and graded for three classes (the previous two and a class on combinatorics)</li>
 				</ul>
 			</div>
-			<div>
+			<div id="casos">
 				<h2><span class="unimportant">Data Coder - </span>CMU's CASOS<span class="notes"> (part time)</span></h2>
 				<p class="dates">(Fall 2009 &mdash; Summer 2010)</p>
 				<ul>
@@ -137,7 +137,7 @@
 					<li>Worked closely with post-doc Judith Gelernter in the development of her georeferencing algorithm for news articles</li>
 				</ul>
 			</div>
-			<div>
+			<div id="fluid">
 				<h2>Fluid.js<span class="notes"> (personal project)</span></h2>
 				<p class="dates">(Spring 2014 &mdash; )</p>
 				<ul>
