fixed URLs, cleaned code

--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
 					<li>Developed an app which allows customers at restaurants to pay their bills on their smartphones</li>
 					<li>Talked extensively with restaurant owners and patrons, adjusting the product based on their feedback</li>
 					<li>Ran the app live at a restaurant, adjusting based on customer responses and resulting in metrics 50x better than the competition</li>
-					<li>Website: <a>getthecheck.com</a></li>
-					<li>Metrics site: <a>getthecheck.com/metrics.html</a></li>
+					<li>Splash Page: <a>getthecheck.com</a></li>
+					<li>Metrics/Demo: <a>getthecheck.com/info.html</a></li>
 					<li>Code: <a>github.com/Check-Please/cx</a></li>
 				</ul>
 			</div>
