office 365 sign in statement made it sounds like I did everything.  Now fixed

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 				<p class="dates">(Summer 2011)</p>
 				<ul>
 					<li>Worked with the Office Shared Services team</li>
-					<li>Build the sign-in screen in Office 365</li>
+					<li>Helped build the sign-in screen in Office 365</li>
 					<li>Developed a tool for automatic data collection in the back end of Office 365</li>
 				</ul>
 			</div>
