ranked skilled, added abstract ones

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<script type="text/JavaScript" src="resume.js"></script>
 	</head>
 	<body>
-		<div class="header">
+		<div id="header">
 			<h1>Martin Samuel Jelin</h1>
 			<ul class="contact">
 				<li><a>sjelin@gmail.com</a></li>
@@ -25,42 +25,47 @@
 				<li><a>(310) 880-4668</a></li>
 			</ul>
 		</div>
-		<div class="about">
-			<div id="coding">
-				<h2>Coding Skills</h2>
-				<p>I've worked with the following technologies:</p>
-				<ul class="inline">
-					<li>HTML</li>
-					<li>CSS</li>
-					<li>SASS</li>
-					<li>JavaScript</li>
-					<li>jQuery</li>
-					<li>Backbone</li>
-					<li>AngularJS</li>
-					<li>Node.js</li>
-					<li>Java</li>
-					<li>Servlet API</li>
-					<li>Google App Engine</li>
-					<li>Eclipse</li>
-					<li>Objective-C</li>
-					<li>Xcode</li>
-					<li>git</li>
-					<li>C</li>
-					<li>GDB</li>
-					<li>C++</li>
-					<li>C#</li>
-					<li>Microsoft Visual Studio</li>
-					<li>Python</li>
-					<li>Perl</li>
-					<li>Ruby</li>
-					<li>PHP</li>
-					<li>Vim</li>
-					<li>LaTeX</li>
-					<li>Make</li>
-					<li>Bash</li>
-					<li>Assembly</li>
-				</ul>
-				<p>I'm best with JavaScript, and I'm a quick learner<p>
+		<div id="about">
+			<div id="skills">
+				<h2>Technical Skills</h2>
+				<p>I've worked with the following technologies/concepts:</p>
+				<ol>
+					<li><ul class="totally inline">
+						<li>HTML/CSS</li>
+						<li>JavaScript</li>
+						<li>jQuery</li>
+						<li>Java</li>
+						<li>C</li>
+						<li>Bash</li>
+						<li>git</li>
+						<li>Dynamic Programming</li>
+						<li>Data Structures</li>
+						<li>Graph Theory</li>
+					</ul></li>
+					<li><ul class="totally inline">
+						<li>Perl</li>
+						<li>Ruby</li>
+						<li>Python</li>
+						<li>Objective-C</li>
+						<li>C++</li>
+						<li>Make</li>
+						<li>Servlet API</li>
+						<li>Google App Engine</li>
+						<li>GDB</li>
+						<li>Number Theory</li>
+					</ul></li>
+					<li><ul class="totally inline">
+						<li>Backbone</li>
+						<li>AngularJS</li>
+						<li>Node.js</li>
+						<li>C#</li>
+						<li>PHP</li>
+						<li>Assembly</li>
+						<li>Machine Learning</li>
+						<li>Computer Vision</li>
+						<li>Cryptography</li>
+					</ul></li>
+				</ol>
 			</div>
 			<div id="other">
 				<h2>Other Skills</h2>
@@ -92,7 +97,7 @@
 				</p>
 			</div>
 		</div>
-		<div class="experience">
+		<div id="experience">
 			<div id="entrepreneurship">
 				<h2>Entrepreneurship</h2>
 				<p class="dates">(May 2013 &mdash; )</p>
