cleaned some stuff

--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
 			</div>
 			<div id="other">
 				<h2>Other Skills</h2>
-				<p>I have been slowly learning UI design.  This resume itself was a small exercise in responsive design (web version on my GitHub).  I would also recommend checking out my startup (see <a><strong>Entrepreneurship</strong></a>).</p>
-				<p>I have a strong discrete math background and some leadership experience.  I also have a lot of practice talking to customers.</p>
+				<p>I have been learning UI design.  This resume itself was a small exercise in responsive design (web version on my GitHub).  Checking out my startup work for more examples (see <a><strong>Entrepreneurship</strong></a>).</p>
+				<p>I also have a strong discrete math background, plenty of practice talking to customers, and some leadership experience.</p>
 			</div>
 		</div>
 		<div id="experience">
