make stuff clearer

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 			</div>
 			<div id="skills">
 				<h2>Technical Skills</h2>
-				<p>I've worked with the following technologies/concepts:</p>
+				<p>I've used the following technologies &amp; concepts (ranked by experience):</p>
 				<ol>
 					<li><ul class="totally inline">
 						<li>HTML/CSS</li>
@@ -67,10 +67,10 @@
 						<li>Graph Theory</li>
 					</ul></li>
 					<li><ul class="totally inline">
-						<li>Perl</li>
-						<li>Ruby</li>
 						<li>Python</li>
+						<li>Ruby</li>
 						<li>Objective-C</li>
+						<li>Perl</li>
 						<li>C++</li>
 						<li>Servlet API</li>
 						<li>Google App Engine</li>
