making stuff clearer

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 			</div>
 			<div id="skills">
 				<h2>Technical Skills</h2>
-				<p>I've used the following technologies &amp; concepts (ranked by experience):</p>
+				<p>Ranked by experience:</p>
 				<ol>
 					<li><ul class="totally inline">
 						<li>HTML/CSS</li>
