update with google info

--- a/index.html
+++ b/index.html
@@ -25,7 +25,113 @@
 				<li><a>(310) 880-4668</a></li>
 			</ul>
 		</div>
+		<div id="experience">
+			<div id="google">
+				<h2>Google</h2>
+				<p class="dates">(October 2014 &mdash; June 2017)</p>
+				<ul>
+					<li>Primarily worked on Protractor, an integration testing framework for web applications.
+					<ul>
+						<li>Created Protractor's plugin API.</li>
+						<li>Restructured much of the codebase to support ES6 promises and future webdriver versions.</li>
+						<li>Redesigned the bootstrapping logic to reduce flakiness and improve usability.</li>
+						<li>Added basic support for mobile browsers.</li>
+						<li>Added support for ngUpgrade apps.</li>
+						<li>Much more.  View the codebase on GitHub: <a>github.com/angular/protractor</a></li>
+					</ul>
+					</li>
+					<li>Ran Google's internal process for upgrading over 600 karma tests from jasmine 1.3 to jasmine 2.0.</li>
+					<li>Briefly worked on integration testing for Double Click Bid Manager.</li>
+				</ul>
+			</div>
+			<div id="entrepreneurship">
+				<h2>Entrepreneurship</h2>
+				<p class="dates">(May 2013 &mdash; September 2014)</p>
+				<ul>
+					<li>Developed an app which allows customers at restaurants to pay their bills on their smartphones.</li>
+					<li>Talked extensively with restaurant owners and patrons, adjusting the product based on their feedback.</li>
+					<li>Ran the app live at a restaurant, adjusting based on customer responses and resulting in metrics 50x better than the competition.</li>
+					<li>Splash Page: <a>getthecheck.com</a></li>
+					<li>Metrics/Demo: <a>getthecheck.com/info.html</a></li>
+					<li>Code: <a>github.com/Check-Please/cx</a></li>
+				</ul>
+			</div>
+			<div id="microsoft">
+				<h2>Microsoft Internship</h2>
+				<p class="dates">(Summer 2011)</p>
+				<ul>
+					<li>Worked with the Office Shared Services team.</li>
+					<li>Helped build the sign-in screen in Office 365.</li>
+					<li>Developed a tool for automatic data collection in the back end of Office 365.</li>
+				</ul>
+			</div>
+			<div id="cisco">
+				<h2>Cisco Internship</h2>
+				<p class="dates">(Summer 2010)</p>
+				<ul>
+					<li>Worked with the Cisco CRS Multi-Chassis debugging team.</li>
+					<li>Worked on a website for executing debugging commands, displaying debugging information, and searching a database of bug reports.</li>
+				</ul>
+			</div>
+			<div id="ta">
+				<h2>Teaching Assistant<span class="notes"> (part time)</span></h2>
+				<p class="dates">(Fall 2010, Fall 2011)</p>
+				<ul>
+					<li>Taught recitation for 3D calculus and introductory discrete mathematics.</li>
+					<li>Held office hours and graded for 3D calc, discrete math, and combinatorics.</li>
+				</ul>
+			</div>
+			<div id="casos">
+				<h2><span class="unimportant">Data Coder - </span>CMU's CASOS<span class="notes"> (part time)</span></h2>
+				<p class="dates">(Fall 2009 &mdash; Summer 2010)</p>
+				<ul>
+					<li>Helped develop software for the analysis of textual social networks.</li>
+					<li>Helped Judith Gelernter to develop a georeferencing algorithm for news.</li>
+				</ul>
+			</div>
+		</div>
 		<div id="about">
+			<div id="skills">
+				<h2>Skills</h2>
+				<p>Ranked by experience:</p>
+				<ol>
+					<li><ul class="totally inline">
+						<li>JavaScript</li>
+						<li>TypeScript</li>
+						<li>Node.js</li>
+						<li>HTML/CSS</li>
+						<li>git</li>
+						<li>Java</li>
+						<li>Angular & Protractor</li>
+					</ul></li>
+					<li><ul class="totally inline">
+						<li>Web Design</li>
+						<li>C</li>
+						<li>Python</li>
+						<li>jQuery</li>
+						<li>Bash</li>
+						<li>Servlet API</li>
+						<li>Dynamic Programming</li>
+						<li>Data Structures</li>
+						<li>Graph Theory</li>
+						<li>Number Theory</li>
+					</ul></li>
+					<li><ul class="totally inline">
+						<li>Perl</li>
+						<li>Ruby</li>
+						<li>Objective-C</li>
+						<li>C++</li>
+						<li>C#</li>
+						<li>PHP</li>
+						<li>Backbone</li>
+						<li>Google App Engine</li>
+						<li>GDB</li>
+						<li>Assembly</li>
+						<li>Machine Learning</li>
+						<li>Computer Vision</li>
+					</ul></li>
+				</ol>
+			</div>
 			<div id="education">
 				<h2>Education</h2>
 				<p>
@@ -42,112 +148,18 @@
 				</p>
 				<p>Notable Classes:
 					<ul class="reduce-padding">
-						<li>15-410 Operating Systems</li>
-						<li>15-385 Computer Vision</li>
-						<li>15-451 Algorithms</li>
-						<li>21-701 Discrete Mathematics</li>
-						<li>21-484 Graph Theory</li>
+						<li>Operating Systems</li>
+						<li>Computer Vision</li>
+						<li>Algorithms</li>
+						<li>Discrete Mathematics</li>
+						<li>Graph Theory</li>
 					</ul>
 				</p>
 			</div>
-			<div id="skills">
-				<h2>Technical Skills</h2>
-				<p>Ranked by experience:</p>
-				<ol>
-					<li><ul class="totally inline">
-						<li>HTML/CSS</li>
-						<li>JavaScript</li>
-						<li>jQuery</li>
-						<li>Java</li>
-						<li>C</li>
-						<li>Bash</li>
-						<li>git</li>
-						<li>Dynamic Programming</li>
-						<li>Data Structures</li>
-						<li>Graph Theory</li>
-					</ul></li>
-					<li><ul class="totally inline">
-						<li>Python</li>
-						<li>Ruby</li>
-						<li>Objective-C</li>
-						<li>Perl</li>
-						<li>C++</li>
-						<li>Servlet API</li>
-						<li>Google App Engine</li>
-						<li>GDB</li>
-						<li>Number Theory</li>
-					</ul></li>
-					<li><ul class="totally inline">
-						<li>Backbone</li>
-						<li>AngularJS</li>
-						<li>Node.js</li>
-						<li>C#</li>
-						<li>PHP</li>
-						<li>Assembly</li>
-						<li>Machine Learning</li>
-						<li>Computer Vision</li>
-						<li>Cryptography</li>
-					</ul></li>
-				</ol>
-			</div>
 			<div id="other">
-				<h2>Other Skills</h2>
-				<p>I have been learning UI design.  This resume itself was a small exercise in responsive design (web version on my GitHub).  Checking out my startup work for more examples (see <a><strong>Entrepreneurship</strong></a>).</p>
-				<p>I also have a strong discrete math background, plenty of practice talking to customers, and some leadership experience.</p>
-			</div>
-		</div>
-		<div id="experience">
-			<div id="entrepreneurship">
-				<h2>Entrepreneurship</h2>
-				<p class="dates">(May 2013 &mdash; )</p>
-				<ul>
-					<li>Developed an app which allows customers at restaurants to pay their bills on their smartphones</li>
-					<li>Talked extensively with restaurant owners and patrons, adjusting the product based on their feedback</li>
-					<li>Ran the app live at a restaurant, adjusting based on customer responses and resulting in metrics 50x better than the competition</li>
-					<li>Splash Page: <a>getthecheck.com</a></li>
-					<li>Metrics/Demo: <a>getthecheck.com/info.html</a></li>
-					<li>Code: <a>github.com/Check-Please/cx</a></li>
-				</ul>
-			</div>
-			<div id="microsoft">
-				<h2>Microsoft Internship</h2>
-				<p class="dates">(Summer 2011)</p>
-				<ul>
-					<li>Worked with the Office Shared Services team</li>
-					<li>Helped build the sign-in screen in Office 365</li>
-					<li>Developed a tool for automatic data collection in the back end of Office 365</li>
-				</ul>
-			</div>
-			<div id="cisco">
-				<h2>Cisco Internship</h2>
-				<p class="dates">(Summer 2010)</p>
-				<ul>
-					<li>Worked with the Cisco CRS Multi-Chassis debugging team</li>
-					<li>Worked on a website for executing debugging commands, displaying debugging information, and searching a database of bug reports</li>
-				</ul>
-			</div>
-			<div id="ta">
-				<h2>Teaching Assistant<span class="notes"> (part time)</span></h2>
-				<p class="dates">(Fall 2010, Fall 2011)</p>
-				<ul>
-					<li>Taught recitation for two classes (basic 3D calculus and introductory discrete mathematics), held office hours and graded for three classes (the previous two and a class on combinatorics)</li>
-				</ul>
-			</div>
-			<div id="casos">
-				<h2><span class="unimportant">Data Coder - </span>CMU's CASOS<span class="notes"> (part time)</span></h2>
-				<p class="dates">(Fall 2009 &mdash; Summer 2010)</p>
-				<ul>
-					<li>Helped develop software for the analysis of textual social networks</li>
-					<li>Worked closely with post-doc Judith Gelernter in the development of her georeferencing algorithm for news articles</li>
-				</ul>
-			</div>
-			<div id="fluid">
-				<h2>Fluid.js<span class="notes"> (personal project)</span></h2>
-				<p class="dates">(Spring 2014 &mdash; )</p>
-				<ul>
-					<li>A JavaScript MVC designed to be lightweight and similar to Backbone.js in usage, but allow for CSS transitions to be incorporated more easily</li>
-					<li>Git Repo: <a>github.com/sjelin/FluidJS</a></li>
-				</ul>
+				<h2>Other</h2>
+				<p>I have been learning UI design.  Checking out my startup work for more examples (see <a><strong>Entrepreneurship</strong></a>).</p>
+				<p>I also have a strong discrete math background and some leadership experience.</p>
 			</div>
 		</div>
 	</body>
